src/objects/Territory2.object
<CustomObject>
    <fields>
        <fullName>Hierarchy_ID__c</fullName>
        <description>Stores the hierarchy ID of a territory node from CMD</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Hierarchy ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Level__c</fullName>
        <label>Hierarchy Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>L1</fullName>
                </value>
                <value>
                    <fullName>L2</fullName>
                </value>
                <value>
                    <fullName>L3</fullName>
                </value>
                <value>
                    <fullName>L4</fullName>
                </value>
                <value>
                    <fullName>L5</fullName>
                </value>
                <value>
                    <fullName>L6</fullName>
                </value>
                <value>
                    <fullName>L7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NSA_Territory__c</fullName>
        <formula>IF(RIGHT(DeveloperName, 3) = &quot;NSA&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If DevelopName with NSA then TRUE</inlineHelpText>
        <label>NSA Territory</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>